# go-libp2p

./: BUILD.bazel  libp2p.go  libp2p_test.go  options.go  package.json
.gx/: lastpubver
config/: BUILD.bazel  config.go  muxer.go  reflection_magic.go  security.go  transport.go
examples/datagram/: README.md  main.go
p2p/discovery/: BUILD.bazel
p2p/host/basic/: BUILD.bazel  basic_host.go
p2p/host/relay/: BUILD.bazel
p2p/host/routed/: BUILD.bazel
p2p/net/mock/: BUILD.bazel
p2p/protocol/identify/: BUILD.bazel
p2p/protocol/identify/pb/: BUILD.bazel
p2p/protocol/ping/: BUILD.bazel
p2p/test/backpressure/: BUILD.bazel
p2p/test/reconnects/: BUILD.bazel
