load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mdns.go"],
    importpath = "github.com/libp2p/go-libp2p/p2p/discovery",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//host:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_multiformats_go_multiaddr_net//:go_default_library",
        "@com_github_whyrusleeping_mdns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mdns_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//p2p/host/basic:go_default_library",
        "@com_github_libp2p_go_libp2p_core//host:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_swarm//testing:go_default_library",
    ],
)
