load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "basic_host.go",
        "natmgr.go",
    ],
    importpath = "github.com/libp2p/go-libp2p/p2p/host/basic",
    visibility = ["//visibility:public"],
    deps = [
        "//p2p/protocol/identify:go_default_library",
        "//p2p/protocol/ping:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_jbenet_goprocess//:go_default_library",
        "@com_github_jbenet_goprocess//context:go_default_library",
        "@com_github_libp2p_go_eventbus//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//connmgr:go_default_library",
        "@com_github_libp2p_go_libp2p_core//event:go_default_library",
        "@com_github_libp2p_go_libp2p_core//host:go_default_library",
        "@com_github_libp2p_go_libp2p_core//network:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peerstore:go_default_library",
        "@com_github_libp2p_go_libp2p_core//protocol:go_default_library",
        "@com_github_libp2p_go_libp2p_nat//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_multiformats_go_multiaddr_dns//:go_default_library",
        "@com_github_multiformats_go_multiaddr_net//:go_default_library",
        "@com_github_multiformats_go_multistream//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["basic_host_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_libp2p_go_eventbus//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//event:go_default_library",
        "@com_github_libp2p_go_libp2p_core//helpers:go_default_library",
        "@com_github_libp2p_go_libp2p_core//host:go_default_library",
        "@com_github_libp2p_go_libp2p_core//network:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_core//protocol:go_default_library",
        "@com_github_libp2p_go_libp2p_core//test:go_default_library",
        "@com_github_libp2p_go_libp2p_swarm//testing:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_multiformats_go_multiaddr_dns//:go_default_library",
    ],
)
