load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "identify_pb_proto",
    srcs = ["identify.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "identify_pb_go_proto",
    importpath = "github.com/libp2p/go-libp2p/p2p/protocol/identify/pb",
    proto = ":identify_pb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":identify_pb_go_proto"],
    importpath = "github.com/libp2p/go-libp2p/p2p/protocol/identify/pb",
    visibility = ["//visibility:public"],
)
